test/corpus/control_flow/while.txt
================================================================================
Control Flow While ID=2KOUGPC
================================================================================

/// Expect:
/// - output: "10\n9\n8\n7\n6\n5\n4\n3\n2\n1\n"

fn main() {
    mut x: i64 = 10

    while (x > 0) {
        println("{}", x)
        x = x - 1
    }
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (function_declaration
    (identifier)
    (parameters)
    (block
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (primitive_type)
        (integer_literal))
      (while_statement
        (parenthesized_expression
          (binary_expression
            (identifier)
            (integer_literal)))
        (block
          (call_expression
            (identifier)
            (arguments
              (argument
                (string_literal))
              (argument
                (identifier))))
          (assignment_expression
            (identifier)
            (binary_expression
              (identifier)
              (integer_literal))))))))
