test/corpus/expressions.txt
=======================================================
Function declaration with params and return expression
=======================================================

function foo(boo: i32, baz: f32) -> bool {
    return false
}

-------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (return_statement
        (boolean_literal)))))

=======================================================
Binary operator expressions
=======================================================

a * b
a / b
a % b
a + b
a - b
a >> b
a << b
a == b
a & b
a | b
a ^ b

-------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier))
  (binary_expression
    (identifier)
    (identifier)))

=======================================================
Increment and decrement
=======================================================

i++
i--

-------------------------------------------------------

(source_file
  (increment_statement
    (identifier))
  (decrement_statement
    (identifier)))

=======================================================
Comparative (equality)
=======================================================

i % 2 == 0

-------------------------------------------------------

(source_file
  (binary_expression
    (binary_expression
      (identifier)
      (integer_literal))
    (integer_literal)))
