test/corpus/functions.txt
========================================
Main function
========================================

function main() {

}

---

(source_file
  (function_item
    (identifier)
    (parameters)
    (block)))

========================================
Main function with args
========================================

function main(args: [String]) {

}

---

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (array_type
          (primitive_type))))
    (block)))

========================================
Function declaration with arguments
========================================

function foo(args: [String], count: i64) {

}

---

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (array_type
          (primitive_type)))
      (parameter
        (identifier)
        (primitive_type)))
    (block)))

========================================
Function with return type
========================================

function foo() -> [String] {

}

---

(source_file
  (function_item
    (identifier)
    (parameters)
    (array_type
      (primitive_type))
    (block)))

========================================
Function declaration with params
========================================

function foo(boo: i32, baz: f32) -> bool {
    return false
}

---

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (return_expression
        (boolean_literal)))))
