test/corpus/functions/default_arguments_complex.txt
================================================================================
Functions Default Arguments Complex ID=YV4MRSW
================================================================================

/// Expect:
/// - output: "WHF 5 false None\n"

fn say(text: String = "WHF", number: i64 = 5, boolean: bool = false, optional: String? = None) {
    println("{} {} {} {}", text, number, boolean, optional)
}

fn main() {
    say()
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)
        (string_literal))
      (parameter
        (identifier)
        (primitive_type)
        (integer_literal))
      (parameter
        (identifier)
        (primitive_type)
        (boolean_literal))
      (parameter
        (identifier)
        (optional_type
          (primitive_type))
        (none_expression)))
    (block
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (identifier))
          (argument
            (identifier))
          (argument
            (identifier))
          (argument
            (identifier))))))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (call_expression
        (identifier)
        (arguments)))))
