test/corpus/guard/is_guard.txt
================================================================================
Guard Is Guard ID=TQ4LTHI
================================================================================

/// Expect:
/// - output: "hello there: 5\n"

enum Foo {
    Bar(i64)
}

fn main() -> c_int {
    let foo = Foo::Bar(5)
    let bar = Foo::Bar(7)

    guard foo is Bar(x) else {
        println("not matched")
        return -1 as! c_int
    }

    println("hello there: {}", x)
    return 0
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (enum_declaration
    (type_identifier)
    (enum_variant_list
      (enum_tuple_variant
        (identifier)
        (primitive_type))))
  (function_declaration
    (identifier)
    (parameters)
    (primitive_type)
    (block
      (let_declaration
        (identifier)
        (static_call_expression
          (scoped_identifier)
          (field_identifier)
          (arguments
            (argument
              (integer_literal)))))
      (let_declaration
        (identifier)
        (static_call_expression
          (scoped_identifier)
          (field_identifier)
          (arguments
            (argument
              (integer_literal)))))
      (guard_statement
        (binary_expression
          (identifier)
          (call_expression
            (identifier)
            (arguments
              (argument
                (identifier)))))
        (block
          (call_expression
            (identifier)
            (arguments
              (argument
                (string_literal))))
          (return_statement
            (type_conversion_expression
              (unary_expression
                (integer_literal))
              (primitive_type)))))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal))
          (argument
            (identifier))))
      (return_statement
        (integer_literal)))))
