test/corpus/math/number_types.txt
================================================================================
Math Number Types ID=XWA5EO2
================================================================================

/// Expect:
/// - output: ""

fn main() {
    let a: i8 = 0;
    let b: i16 = 0;
    let c: i32 = 0;
    let d: i64 = 0;
    let e: u8 = 0;
    let f: u16 = 0;
    let g: u32 = 0;
    let h: u64 = 0;
    let i: f32 = 0;
    let j: f64 = 0;

    let large_u64 = 18_446_744_073_709_551_615
    let small_i64 = -9_223_372_036_854_775_808
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (identifier)
        (integer_literal))
      (let_declaration
        (identifier)
        (unary_expression
          (integer_literal))))))
