test/corpus/math/zero_division.txt
================================================================================
Math Zero Division ID=RJRO1RB
================================================================================

/// Expect:
/// - stderr: "Panic: Division by zero in checked division '127 / 0'\nPanic: Division by zero in checked division '32767 / 0'\nPanic: Division by zero in checked division '2147483647 / 0'\nPanic: Division by zero in checked division '9223372036854775807 / 0'\nPanic: Division by zero in checked division '255 / 0'\nPanic: Division by zero in checked division '65535 / 0'\nPanic: Division by zero in checked division '4294967295 / 0'\nPanic: Division by zero in checked division '18446744073709551615 / 0'\n"

fn main() {
    {
        let a: i8 = 127
        let b: i8 = 0
        a / b
    }
    {
        let a: i16 = 32_767
        let b: i16 = 0
        a / b
    }
    {
        let a: i32 = 2_147_483_647
        let b: i32 = 0
        a / b
    }
    {
        let a: i64 = 9_223_372_036_854_775_807
        let b: i64 = 0
        a / b
    }
    {
        let a: u8 = 255
        let b: u8 = 0
        a / b
    }
    {
        let a: u16 = 65_535
        let b: u16 = 0
        a / b
    }
    {
        let a: u32 = 4_294_967_295
        let b: u32 = 0
        a / b
    }
    {
        // FIXME: The max value as a literal (18_446_744_073_709_551_615) fails to parse with 'could not parse int'
        mut a: u64 = 9_223_372_036_854_775_807
        a *= 2
        a += 1
        let b: u64 = 0
        a / b
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (block
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (binary_expression
          (identifier)
          (identifier)))
      (block
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (binary_expression
          (identifier)
          (identifier)))
      (block
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (binary_expression
          (identifier)
          (identifier)))
      (block
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (binary_expression
          (identifier)
          (identifier)))
      (block
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (binary_expression
          (identifier)
          (identifier)))
      (block
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (binary_expression
          (identifier)
          (identifier)))
      (block
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (binary_expression
          (identifier)
          (identifier)))
      (block
        (line_comment)
        (mutable_declaration
          (mutable_specifier)
          (identifier)
          (primitive_type)
          (integer_literal))
        (assignment_expression
          (identifier)
          (integer_literal))
        (assignment_expression
          (identifier)
          (integer_literal))
        (let_declaration
          (identifier)
          (primitive_type)
          (integer_literal))
        (binary_expression
          (identifier)
          (identifier))))))
