test/corpus/original/bitwisenot.txt
================================================================================
Bitwise Not
================================================================================

let digest = ~state

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (identifier)
    (bitwisenot_expression
      (identifier))))
