test/corpus/original/byte_literal.txt
================================================================================
Byte literal
================================================================================

mut b = b'b'

--------------------------------------------------------------------------------

(source_file
  (mutable_declaration
    (identifier)
    (byte_literal)))
