test/corpus/original/class.txt
================================================================================
Simple class
================================================================================

class Bar {
    y: i64
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (type_identifier)
    (field_declaration_list
      (field_declaration
        (field_identifier)
        (primitive_type)))))
