test/corpus/original/dictionaries.txt
================================================================================
Zeroed mutable dict declaration
================================================================================

mut values: [String:JsonValue] = [:]

--------------------------------------------------------------------------------

(source_file
  (mutable_declaration
    (mutable_specifier)
    (identifier)
    (dictionary_type
      (primitive_type)
      (identifier))
    (dictionary_literal)))
