test/corpus/original/scoped_identifier.txt
================================================================================
Scoped identifier
================================================================================

builder.to_string()

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (field_expression
      (identifier)
      (field_identifier))
    (arguments)))
