test/corpus/original/type_casts.txt
================================================================================
Type casts (optional)
================================================================================

l += 5 as? u64

--------------------------------------------------------------------------------

(source_file
  (type_conversion_expression
      (assignment_expression
        (identifier)
        (integer_literal))
      (primitive_type)))

================================================================================
Type casts (abort)
================================================================================

l += 5 as! u64

--------------------------------------------------------------------------------

(source_file
  (type_conversion_expression
      (assignment_expression
        (identifier)
        (integer_literal))
      (primitive_type)))
